refactor: update mobile navbar settings

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
                 <img src="{{ site.navbar_logo }}" alt="{{ site.navbar_logo_alt }}">
             </a>
 
-            <div class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet">
+            <div class="navbar-item ml-auto mr-0 has-text-white is-hidden-desktop is-hidden-tablet" x-on:click="openNav = !openNav">
                 <span>🔍︎&nbsp;🌐</span>
             </div>
 
