--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -17,6 +17,6 @@
         </div>
     </div>
     <footer class="card-footer">
-        <p class="card-footer-item">Published: {{ post.date | date: '%b %-d, %Y' }}</p>
+        <p class="card-footer-item">{{ post.date | date: '%Y-%m-%d' }}</p>
     </footer>
 </div>
