--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -1,11 +1,9 @@
 <div class="card">
-    <header class="card-header">
-        {% if post.image %}
-            <a class="title is-4" href="{{ site.baseurl }}{{ post.url }}">{% if post.date %}{{ post.date | date: '%Y-%m-%d' }}: {% endif %}{{ post.title }}</a>
-        {% endif %}
-    </header>
     <div class="card-content">
         <div class="content">
+            {% if post.image %}
+                <a class="title is-4" href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+            {% endif %}
             {% if post.summary %}
                 {{ post.summary | markdownify }}
             {% else %}
