--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -1,8 +1,6 @@
 <div class="card">
     <header class="card-header">
-        {% if post.image %}
-            <a class="title is-4" href="{{ site.baseurl }}{{ post.url }}">{% if post.date %}{{ post.date | date: '%Y-%m-%d' }}: {% endif %}{{ post.title }}</a>
-        {% endif %}
+        <p class="card-header-title">{% if post.date %}{{ post.date | date: '%Y-%m-%d' }}: {% endif %}{{ post.title }}</p>
     </header>
     <div class="card-content">
         <div class="content">
