--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -1,13 +1,11 @@
 <div class="card">
-    <header class="card-header">
-        <p class="card-header-title">{% if post.date %}{{ post.date | date: '%Y-%m-%d' }}: {% endif %}{{ post.title }}</p>
-    </header>
     <div class="card-content">
         <div class="content">
+            <p>{% if post.date %}{{ post.date | date: '%Y-%m-%d' }}: {% endif %}{{ post.title }}</p>
             {% if post.summary %}
             {{ post.summary | markdownify }}
             {% else %}
-            <p>{{ post.excerpt | markdownify }}</p>
+            {{ post.excerpt | markdownify }}
             {% endif %}
         </div>
         <div class="has-text-centered">
