--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,20 +1,20 @@
 <nav class="pagination is-centered">
     {% if paginator.previous_page %}
-    <a href="{{ site.baseurl }}{{ paginator.previous_page_path }}" class="pagination-previous is-info">&lt;</a>
+        <a href="{{ site.baseurl }}{{ paginator.previous_page_path }}" class="pagination-previous">&lt;</a>
     {% else %}
-    <p class="pagination-previous" disabled>&lt;</p>
+        <p class="pagination-previous" disabled>&lt;</p>
     {% endif %}
     {% if paginator.next_page %}
-    <a href="{{ site.baseurl }}{{ paginator.next_page_path }}" class="pagination-next is-info">&gt;</a>
+        <a href="{{ site.baseurl }}{{ paginator.next_page_path }}" class="pagination-next">&gt;</a>
     {% else %}
-    <p class="pagination-next" disabled>&gt;</p>
+        <p class="pagination-next" disabled>&gt;</p>
     {% endif %}
 
     <ul class="pagination-list">
         {% if paginator.page_trail %}
             {% for trail in paginator.page_trail %}
-                <li class="pagination-link is-info {{% if page.url == trail.path %}} is-current {{% endif %}}">
-                    <a href=" {{ trail.path | prepend: site.baseurl }}" title="{{trail.title}}">{{ trail.num }}</a>
+                <li class="pagination-link {{% if page.url == trail.path %}} is-current {{% endif %}}">
+                    <a href="{{ trail.path | prepend: site.baseurl }}" title="{{trail.title}}">{{ trail.num }}</a>
                 </li>
             {% endfor %}
         {% endif %}
