docs(blog): typos

--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -9,7 +9,7 @@
             {% endif %}
         </div>
         <div class="has-text-centered">
-            <a href="{{ site.baseurl }}{{ post.url }}" class="button">Read full post</a>
+            <a href="{{ site.baseurl }}{{ post.url }}" class="button">{{ site.data[site.active_lang].strings.post_read_full }}</a>
         </div>
     </div>
 </div>
