--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" style="background-color: transparent;">
     <div class="card-content">
         <div class="content">
             <a class="title" href="{{ site.baseurl }}{{ post.url }}">{% if post.date %}{{ post.date | date: '%Y-%m-%d' }}: {% endif %}{{ post.title }}</a>
