--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -1,7 +1,21 @@
 <div class="card" style="background-color: transparent;">
     <div class="card-content">
         <div class="content">
-            <a class="title" href="{{ site.baseurl }}{{ post.url }}">{% if post.date %}{{ post.date | date: '%Y-%m-%d' }}: {% endif %}{{ post.title }}</a>
+            <div class="level is-mobile">
+                <div class="level-left">
+                    <a class="title" href="{{ site.baseurl }}{{ post.url }}">
+                    {{ post.title }}
+                    </a>
+                </div>
+                
+                <div class="level-right">
+                    {% if post.date %}
+                    <p class="is-size-7">
+                        {{ post.date | date: '%Y-%m-%d' }}
+                    </p>
+                    {% endif %}
+                </div>
+            </div>
             {% if post.summary %}
             {{ post.summary | markdownify }}
             {% else %}
@@ -9,7 +23,7 @@
             {% endif %}
         </div>
         <div class="has-text-centered">
-            <a href="{{ site.baseurl }}{{ post.url }}" class="button">{{ site.data[site.active_lang].strings.post_read_full }}</a>
+            <a href="{{ site.baseurl }}{{ post.url }}" class="button" style="background-color: limegreen;">{{ site.data[site.active_lang].strings.post_read_full }}</a>
         </div>
     </div>
 </div>
