docs(blog): update permalink definition and files names

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="content">
-    <p>{{ post.date | date: '%Y-%m-%d' }}, {{ page.author }}</p>
+    <p>{{ page.date | date: '%Y-%m-%d' }}, {{ page.author }}</p>
 
     {% if page.series %}
         {% include series.html %}
