--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,5 +1,5 @@
 <div class="has-text-centered">
-    <a href="{{ site.baseurl }}/feed.xml" class="button is-primary">
+    <a href="{{ site.baseurl }}/feed.xml" class="button" style="background-color: limegreen;">
         <span>Subscribe</span>
     </a>
 </div>
