--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -17,10 +17,11 @@
                 </div>
             </div>
             {% if post.summary %}
-                {{ post.summary | markdownify | strip_html | prepend: "…" }}
+                {% assign truncated_text = post.summary | markdownify | replace: "<br>", "_NEWLINE_" | strip_html %}
             {% else %}
-                {{ post.content | markdownify | strip_html | truncatewords: 50 | prepend: "…" }}
+                {% assign truncated_text = post.content | markdownify | replace: "<br>", "_NEWLINE_" | strip_html | truncatewords: 50 %}
             {% endif %}
+            {{ truncated_text | replace: "_NEWLINE_", "<br>" | append: "…" }}
         </div>
         <div class="has-text-centered">
             <a href="{{ site.baseurl }}{{ post.url }}" class="button" style="background-color: limegreen;">{{ site.data[site.active_lang].strings.post_read_full }}</a>
