--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -21,7 +21,17 @@
             {% else %}
                 {% assign truncated_text = post.content | markdownify | replace: "<br>", "_NEWLINE_" | replace: "</h2>", "_NEWLINE_" | replace: "</p>", "_NEWLINE_" | strip_html | truncatewords: 50 %}
             {% endif %}
-            {{ truncated_text | replace: "_NEWLINE_", "<br>" }}
+            {% assign lines = truncated_text | split: "_NEWLINE_" %}
+            {% for line in lines %}
+                {# Skip any empty lines that might result from splitting #}
+                {% unless line | strip == empty %}
+                    {% if forloop.first %}
+                        <p><strong>{{ line | strip }}</strong></p>
+                    {% else %}
+                        <p>{{ line | strip }}</p>
+                    {% endif %}
+                {% endunless %}
+            {% endfor %}
         </div>
         <div class="has-text-centered">
             <a href="{{ site.baseurl }}{{ post.url }}" class="button" style="background-color: limegreen;">{{ site.data[site.active_lang].strings.post_read_full }}</a>
