docs(blog): update post-card formatting

--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -4,9 +4,7 @@
             <div class="level is-mobile">
                 <div class="level-left">
                     <h2>
-                        <a class="title" href="{{ site.baseurl }}{{ post.url }}">
-                            {{ post.title }}
-                        </a>
+                        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
                     </h2>
                 </div>
                 
