docs(blog): update post-card formatting

--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -29,7 +29,7 @@
             {% endfor %}
         </div>
         <div class="has-text-centered">
-            <a href="{{ site.baseurl }}{{ post.url }}" class="button" style="background-color: limegreen;">{{ site.data[site.active_lang].strings.post_read_full }}</a>
+            <a href="{{ site.baseurl }}{{ post.url }}" class="button has-text-black" style="background-color: limegreen;">{{ site.data[site.active_lang].strings.post_read_full }}</a>
         </div>
     </div>
 </div>
