--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -28,7 +28,7 @@
                 {% endif %}
             {% endfor %}
         </div>
-        <div class="has-text-centered">
+        <div>
             <a href="{{ site.baseurl }}{{ post.url }}" class="button has-text-black" style="background-color: limegreen;">{{ site.data[site.active_lang].strings.post_read_full }}</a>
         </div>
     </div>
