--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -4,7 +4,7 @@
             {% if post.date %}
                 <p class="mb-0 pb-0">{{ post.date | date: '%Y-%m-%d' }}</p>
             {% endif %}
-            <h2 class="mt-0 pt-0"></h2>>
+            <h2 class="mt-0 pt-0"></h2>
                 <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
             </h2>
             {% if post.summary %}
