chore: update lang and locale

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: "default"
 ---
 <div class="content">
     <p>{{ page.date | date: '%Y-%m-%d' }}, {{ page.author }}</p>
