--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,14 +22,14 @@
     <link rel="alternate" hreflang="{{ lang }}" {% static_href %}href="{{ hreflang_url }}"{% endstatic_href %}>
     {%- endfor %}
 
-    {% seo %}
     {%- capture seo_raw -%}{% seo %}{%- endcapture -%}
-    {%- assign seo_lines = seo_raw | split: "\n" -%}
-
+    {%- assign seo_normalized = seo_raw | replace: "\r\n", "\n" -%}
+    {%- assign seo_lines = seo_normalized | split: "\n" -%}
     {%- for line in seo_lines -%}
-        {%- unless line contains '<link' and line contains ' rel="canonical"' %}
-            {{ line }}
-        {%- endunless -%}
+    {%- assign trimmed_line = line | strip -%}
+    {%- unless trimmed_line contains '<link' and trimmed_line contains 'rel="canonical"' -%}
+        {{ trimmed_line }}
+    {%- endunless -%}
     {%- endfor -%}
 
     <link rel="preload" href="{{ site.baseurl }}/assets/css/app.css" as="style">
