--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,7 @@
     {%- endfor %}
 
     {%- capture seo_raw -%}{% seo %}{%- endcapture -%}
+    <pre>{{ seo_raw | escape }}</pre>
     {%- assign seo_normalized = seo_raw | replace: "\r\n", "\n" -%}
     {%- assign seo_lines = seo_normalized | split: "\n" -%}
     {%- for line in seo_lines -%}
