fix(head.html): refine SEO output to exclude canonical link from generated SEO lines

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
 
     {%- capture seo_raw -%}{% seo %}{%- endcapture -%}
     <pre>{{ seo_raw | escape }}</pre>
-    {%- assign seo_normalized = seo_raw | replace: "\r\n", "\n" -%}
+    {%- assign seo_normalized = seo_raw | replace: "\r\n", "\n" | replace: "\r", "\n" -%}
     {%- assign seo_lines = seo_normalized | split: "\n" -%}
     {%- for line in seo_lines -%}
     {%- assign trimmed_line = line | strip -%}
